--- a/Web.config
+++ b/Web.config
@@ -18,6 +18,12 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  
+  <system.web>
+        <customErrors mode="Off"/>
+    </system.web>
+    
+    
   <system.web>
     <httpRuntime targetFramework="4.5" />
     <compilation targetFramework="4.5" />
